--- a/index.html
+++ b/index.html
@@ -3,15 +3,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>德国专题</title>
+  <title>迪拜掘进之旅</title>
   <link rel="stylesheet" href="widget/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="widget/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+      <ul class="nav navbar-nav">
+        <li><a href="http://www.dayuxiaoyu.com/immigration/detail?id=17" >美国</a></li>
+        <li><a href="http://www.dayuxiaoyu.com/german" >德国</a></li>
+        <li><a href="https://www.chengzijianzhan.com/tetris/page/1629151676087308/" >日本</a></li>
+        <li><a href="http://www.dayuxiaoyu.com/immigration/detail?id=22" >新加坡</a></li>
+        <li><a href="http://www.dayuxiaoyu.com/immigration/detail?id=14" >葡萄牙</a></li>
+        <li><a href="http://www.dayuxiaoyu.com/immigration/detail?id=11" >希腊</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 <!-- header -->
 <header>
-  <img src="img/mobile/img_01.png" class="m" />
+  <img src="img/mobile/img_01.png" class="visible-xs-block" />
 </header>
 <!-- 迪拜购房优势 -->
 <div class="row-advantage">
@@ -53,7 +78,7 @@
       </div>
       <button type="submit" class="btn btn-danger">提交报名</button>
     </form>
-    <p class="p1"><img src="img/icon/icon_14.png" alt="" class="pc" /><img src="img/icon/icon_15.png" alt="" class="m" /> 专家免费评估热线 400 - 6383 - 628</p>
+    <p class="p1"><img src="img/icon/icon_14.png" alt="" class="visible-md-inline-block visible-lg-inline-block" /><img src="img/icon/icon_15.png" alt="" class="visible-xs-inline-block" /> 专家免费评估热线 400 - 6383 - 628</p>
   </div>
 </div>
 <!-- 项目介绍 -->
@@ -63,7 +88,9 @@
       <img src="img/dubai_02.png" />
     </div>
     <div class="row">
+      <li class="col1 col-md-12">
         <img src="img/project/img_01.png" alt="" />
+      </li>
     </div>
   </div>
 </div>
@@ -134,7 +161,15 @@
       <img src="img/dubai_06.png" alt="" />
     </div>
     <div class="box container">
-      
+      <p>5天3晚奢华考察团，<em>6500元/人</em>，每周六出团，实地考察，眼见为实。现场购房团费全返</p>
+      <ul class="row">
+        <li class="col1 col-xs-12 col-md-6">
+          <div><img src="img/room/img_01.png" alt="" /></div>
+        </li>
+        <li class="col2 col-xs-12 col-md-6">
+          <div><img src="img/room/img_02.png" alt="" /></div>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
@@ -144,6 +179,8 @@
     <div class="rowT">
       <img src="img/dubai_04.png" alt="" />
     </div>
+    <p>大鱼小鱼国际携手国际领先地产公司，为您提供最热的海外地产讯息、高回报的海房产品。全覆盖的房产托管服务让您的投资省心无忧，<br />
+        在国内安享投资回报。国际大牌为您打造奢华之选</p>
     <ul class="row">
       <li class="col1 col-xs-6 col-md-3">
         <div>
@@ -174,11 +211,12 @@
     <div class="rowT">
       <img src="img/dubai_05.png" alt="" />
     </div>
+    <p>国际大牌为您打造奢华之选</p>
     <ul class="row">
-      <li class="col1 col-xs-6 col-md-6">
+      <li class="col1 col-xs-12 col-md-6">
         <img src="img/inter/img_01.png" alt="" />
       </li>
-      <li class="col2 col-xs-6 col-md-6">
+      <li class="col2 col-xs-12 col-md-6">
         <img src="img/inter/img_02.png" alt="" />
       </li>
     </ul>
@@ -190,31 +228,31 @@
   <div class="wrap">
     <div class="links pc">
       <a>友情链接：</a>
-      <a href="http://www.efirstlanding.com/" target="_blank">First Landing</a>
+      <a href="http://www.efirstlanding.com/" >First Landing</a>
       <span class="line">|</span>
-      <a href="http://www.lantaiyimin.com/" target="_blank">北京兰台移民</a>
+      <a href="http://www.lantaiyimin.com/" >北京兰台移民</a>
       <span class="line">|</span>
-      <a href="http://www.51xly.com/" target="_blank">七色光游学</a>
+      <a href="http://www.51xly.com/" >七色光游学</a>
       <img src="img/img_06.png" alt="" class="logo" />
     </div>
     <div class="links2">
-      <a href="http://www.dayuxiaoyu.com/page?id=8" target="_blank">关于大鱼小鱼国际</a>
+      <a href="http://www.dayuxiaoyu.com/page?id=8" >关于大鱼小鱼国际</a>
       <span class="line">|</span>
-      <a href="http://www.dayuxiaoyu.com/page?id=9" target="_blank">联系我们</a>
+      <a href="http://www.dayuxiaoyu.com/page?id=9" >联系我们</a>
       <span class="line">|</span>
-      <a href="http://www.dayuxiaoyu.com/page?id=10" target="_blank">招贤纳士</a>
+      <a href="http://www.dayuxiaoyu.com/page?id=10" >招贤纳士</a>
       <span class="line">|</span>
-      <a href="http://www.dayuxiaoyu.com/page?id=11" target="_blank">商务合作</a>
+      <a href="http://www.dayuxiaoyu.com/page?id=11" >商务合作</a>
     </div>
     <p class="cp">
       <span class="span1">北京总部：北京市朝阳区嘉盛中心41层</span><span class="span2 pc">电话：400-6383-628（客户服务）</span><span class="span2 m">VIP咨询：400-6383-628</span><span class="span3">客服邮箱：eric@dayuxiaoyu.com</span>
     </p>
-    <p class="cp cp2 pc">
+    <p class="cp cp2 visible-md-block visible-lg-block">
       2016  © 大鱼小鱼国际™    dayuxiaoyu.com  All  rights  reserve.            京ICP备17022014号 
     </p>
   </div>
 </footer>
-<aside class="pc">
+<aside class="visible-md-block visible-lg-block">
   <ul>
     <li class="web"><a href="http://www.dayuxiaoyu.com/"></a></li>
     <li class="code"><a href="javascript:;"><img src="img/img_24.png" alt="" /></a></li>
@@ -223,6 +261,7 @@
 </aside>
 </body>
 <script type="text/javascript" src="widget/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="widget/bootstrap/js/bootstrap.min.js"></script>
 <script>
   $("#backTop").click(function(){
     $('body, html').animate({
