--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
       <img src="img/dubai_06.png" alt="" />
     </div>
     <div class="box container">
-      <p>5天3晚奢华考察团，<em>6500元/人</em>，每周六出团，实地考察，眼见为实。现场购房团费全返</p>
+      <p>5天3晚奢华考察团，<em>6500元/人</em>，每周六出团，实地考察，眼见为实。</p>
+      <p class="p2">现场完成购房，6500元考察费用全返！</p>
       <ul class="row">
         <li class="col1 col-xs-12 col-md-6">
           <div><img src="img/room/img_01.png" alt="" /></div>
@@ -180,7 +181,7 @@
       <img src="img/dubai_04.png" alt="" />
     </div>
     <p>大鱼小鱼国际携手国际领先地产公司，为您提供最热的海外地产讯息、高回报的海房产品。全覆盖的房产托管服务让您的投资省心无忧，<br />
-        在国内安享投资回报。国际大牌为您打造奢华之选</p>
+        在国内安享投资回报。</p>
     <ul class="row">
       <li class="col1 col-xs-6 col-md-3">
         <div>
@@ -211,7 +212,6 @@
     <div class="rowT">
       <img src="img/dubai_05.png" alt="" />
     </div>
-    <p>国际大牌为您打造奢华之选</p>
     <ul class="row">
       <li class="col1 col-xs-12 col-md-6">
         <img src="img/inter/img_01.png" alt="" />
