--- a/index.html
+++ b/index.html
@@ -252,21 +252,14 @@
     </p>
   </div>
 </footer>
-<aside class="visible-md-block visible-lg-block">
+<!-- <aside class="visible-md-block visible-lg-block">
   <ul>
     <li class="web"><a href="http://www.dayuxiaoyu.com/"></a></li>
     <li class="code"><a href="javascript:;"><img src="img/img_24.png" alt="" /></a></li>
     <li class="top"><a href="javascript:;" id="backTop"></a></li>
   </ul>
-</aside>
+</aside> -->
 </body>
 <script type="text/javascript" src="widget/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript" src="widget/bootstrap/js/bootstrap.min.js"></script>
-<script>
-  $("#backTop").click(function(){
-    $('body, html').animate({
-      scrollTop: 0
-    }, 300);
-  })
-</script>
 </html>
